_sass/layout.scss
// Styles for the site

$font-family: 'Lora', serif;
$font-family-mono: Courier New, Courier, monospace;
$font-color: #4A4A4A;
$font-color-light: lighten($font-color, 10%);
$font-weight-normal: 400;
$font-weight-bold: 700;

$spacing-unit: 48px;

$transition-color: color 0.4s ease;

$breakpoint-sm: 767px;

// General Element Styles

body {
  color: $font-color;
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  color: $font-color;
  font-family: $font-family;
  font-weight: $font-weight-bold;
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 30px;
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 20px;
}

h5 {
  font-size: 16px;
}

h6 {
  font-size: 14px;
}

p, ul, ol, li, span, blockquote, small {
  color: $font-color;
  font-family: $font-family;
  font-weight: $font-weight-normal;
  font-size: 16px;
  line-height: 22px;
}

p {
  &.intro {
    font-size: 18px;
  }

  &.small {
    font-size: 14px;
  }
}

blockquote {
  font-size: 18px;
  font-style: italic;
  line-height: 26px;

  p {
    @extend blockquote;
  }
}

hr {
  border: none; // clear out default border
  border-top: 1px solid rgba($font-color-light, 0.5);
}

a {
  color: $font-color;
  transition: $transition-color;

  &:hover,
  &:focus {
    color: $font-color-light;
  }
}

pre,
code,
code span {
  font-family: $font-family-mono;
  font-size: 16px;
}

pre {
  margin-bottom: 20px;

  &.highlight {
    background-color: rgba(239, 239, 239, 0.3);
  }
}

ol,
ul {
  padding-left: 0;
  margin: $spacing-unit / 2 0;
}

ul {
  list-style: disc;
}

ol {
  padding-left: 16px;
}

li {
  padding-bottom: 12px;
}

img,
iframe {
  max-width: 100%;
}

.center {
  text-align: center;
}

.container {
  max-width: 1024px;
  margin: 0 auto;
  padding: 0 $spacing-unit;

  @media (max-width: $breakpoint-sm) {
    padding: 0 $spacing-unit / 1.5;
  }
}

.wrapper {
  max-width: 480px;
  margin: 0 auto;
}

.section {
  margin-bottom: $spacing-unit;
}

// Header & Footer

.site-header,
.site-footer {
  align-items: center;
  display: flex;
  flex-direction: row;
  margin: $spacing-unit / 2 0;

  @media (max-width: $breakpoint-sm) {
    flex-direction: column;
    text-align: center;
  }
}

.site-footer {
  @media (max-width: $breakpoint-sm) {
    flex-direction: column-reverse;
  }

  .nav {
    @media (max-width: $breakpoint-sm) {
      flex-direction: column;
      margin-bottom: $spacing-unit / 2;
    }

    .nav-item {
      @media (max-width: $breakpoint-sm) {
        padding: $spacing-unit / 4 0;
      }
    }
  }
}

.header-anchor {
  @extend a;

  text-decoration: none;
}

.title, .colophon {
  align-self: flex-start;
  font-size: 18px;
  font-weight: $font-weight-normal;
  margin: 0;
  width: 100%;

  @media (max-width: $breakpoint-sm) {
    margin-bottom: $spacing-unit / 2;
  }

  a {
    @extend .header-anchor;
  }
}

.colophon {
  @media (max-width: $breakpoint-sm) {
    margin-bottom: 0;
  }
}

.nav {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  list-style: none;
  margin: 0;
  padding-left: 0;
  width: 100%;

  @media (max-width: $breakpoint-sm) {
    justify-content: center;
  }
}

.nav-item {
  display: inline-block;
  font-size: 16px;
  margin: 0 $spacing-unit / 2;

  &:last-of-type {
    margin-right: 0;

    @media (max-width: $breakpoint-sm) {
      margin-right: $spacing-unit / 2;
    }
  }

  a {
    @extend .header-anchor;
  }
}

// Content

.content {
  margin: $spacing-unit auto;
}

.works-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
}

.wli {
  box-sizing: border-box;
  max-width: 240px;
  padding-right: $spacing-unit / 4;
}

// Page Layouts

//// Home

#home {
  .intro {
    margin-bottom: $spacing-unit * 2;
    text-align: center;
  }
}

// Post / Entry

.post-meta {
  @extend p.small;

  margin: 0;
}

.post-nav {
  margin-top: $spacing-unit;
  text-align: center;

  .post-nav-item {
    display: block;
    margin-bottom: $spacing-unit / 2;
    text-align: center;
    width: 100%;
  }
}

